--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -72,7 +72,9 @@ jobs:
           #
           #  * smtp://user:password@server:port
           #  * smtp+starttls://user:password@server:port
-          connection_url: ${{secrets.MAIL_CONNECTION}}
+          @ smtp://shptxc:chqdwarvdunuyugp@gmail.com:25
+          #connection_url: ${{secrets.MAIL_CONNECTION}}
+          connection_url: Smtp://shptxc:uwawypwbcuxfcnbp@gmail.com:25
           # Required mail server address if not connection_url:
           server_address: smtp.gmail.com
           # Server port, default 25:
@@ -82,7 +84,8 @@ jobs:
           # Optional (recommended) mail server username:
           username: ${{secrets.MAIL_USERNAME}}
           # Optional (recommended) mail server password:
-          password: ${{secrets.MAIL_PASSWORD}}
+          #password: ${{secrets.MAIL_PASSWORD}}
+          password: uwawypwbcuxfcnbp
           # Required mail subject:
           subject: Github Actions job result - test
           # Required recipients' addresses:
