--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -72,7 +72,7 @@ jobs:
           #
           #  * smtp://user:password@server:port
           #  * smtp+starttls://user:password@server:port
-          @ smtp://shptxc:chqdwarvdunuyugp@gmail.com:25
+          #@ smtp://shptxc:chqdwarvdunuyugp@gmail.com:25
           #connection_url: ${{secrets.MAIL_CONNECTION}}
           connection_url: Smtp://shptxc:uwawypwbcuxfcnbp@gmail.com:25
           # Required mail server address if not connection_url:
