--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,15 +74,15 @@ jobs:
           #  * smtp+starttls://user:password@server:port
           #@ smtp://shptxc:chqdwarvdunuyugp@gmail.com:25
           #connection_url: ${{secrets.MAIL_CONNECTION}}
-          connection_url: smtp://shptxc:uwawypwbcuxfcnbp@gmail.com:587
+          connection_url: smtp://shptxc:uwawypwbcuxfcnbp@gmail.com:465
           # Required mail server address if not connection_url:
           server_address: smtp.gmail.com
           # Server port, default 25:
-          server_port: 587
+          server_port: 465
           # Optional whether this connection use TLS (default is true if server_port is 465)
           secure: true
           # Optional (recommended) mail server username:
-          username: ${{secrets.MAIL_USERNAME}}
+          username: shptxc
           # Optional (recommended) mail server password:
           #password: ${{secrets.MAIL_PASSWORD}}
           password: uwawypwbcuxfcnbp
@@ -91,7 +91,7 @@ jobs:
           # Required recipients' addresses:
           to: zhiming.dai@ukg.com
           # Required sender full name (address can be skipped):
-          from: shptxc # <user@example.com>
+          from: shptxc@gmail.com # <user@example.com>
           # Optional plain body:
           body: output.log
           # Optional HTML body read from file:
